# btuuid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ci.sh  rust-toolchain.toml  rustfmt.toml
.helix/: languages.toml
src/: ad_types.rs  browse_group_identifiers.rs  characteristic.rs  declarations.rs  descriptors.rs  lib.rs  mesh_profile.rs  object_types.rs  protocol_identifiers.rs  service.rs  service_class.rs  units.rs
src/appearance/: categories.rs  mod.rs
update_uuids/src/: main.rs  writer.rs  yaml.rs
