[package]
authors = ["Embassy project contributors"]
description = "Bluetooth UUID values"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "btuuid"
repository = "https://github.com/embassy-rs/btuuid"
version = "0.1.0"
documentation = "https://docs.rs/btuuid"
keywords = ["bluetooth", "uuid"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.85"
exclude = [".github", ".vscode", "ci.sh", "rust-toolchain.toml", "rustfmt.toml", "update_uuids"]

[features]
std = ["alloc"]
alloc = []

[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive"] }
uuid = { version = "1.11.0", optional = true, default-features = false }

[workspace]
members = ["update_uuids"]
